Added HATEOAS for RESTful