@@ -1,9 +1,6 @@
 package org.n3gd0r.recipe.usecase.register;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import lombok.extern.slf4j.Slf4j;
 
 import org.n3gd0r.commons.mediator.HandlerFor;
 import org.n3gd0r.commons.mediator.RequestHandler;
@@ -14,6 +11,8 @@ import org.n3gd0r.recipe.domain.RecipeInstruction;
 import org.n3gd0r.recipe.repository.RecipeRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * RegisterRecipe
@@ -29,22 +28,23 @@ public class RegisterRecipeHandler implements RequestHandler<RegisterRecipeParam
         this.repository = repository;
     }
 
+    @Override
     public Recipe execute(RegisterRecipeParameters request) {
         log.info("Registering recipe: {}", request.name());
         repository.validateNameUnique(request.name());
         List<RecipeIngredient> ingredients = request.ingredients().stream()
-                .map(ip -> new RecipeIngredient(repository.nextRecipeIngredientId(),
-                        ip.ingredientName().trim().toLowerCase(),
-                        ip.ingredientType(),
-                        ip.weight()))
-                .collect(Collectors.toList());
+                .map(ri -> new RecipeIngredient(repository.nextRecipeIngredientId(),
+                        ri.ingredientName().trim().toLowerCase(),
+                        ri.ingredientType(),
+                        ri.weight()))
+                .toList();
         log.debug("Created {} ingredients for recipe: {}", ingredients.size(), request.name());
 
         List<RecipeInstruction> instructions = request.instructions().stream()
-                .map(ip -> new RecipeInstruction(repository.nextRecipeInstructionId(),
-                        ip.instructionNumber(),
-                        ip.instruction()))
-                .collect(Collectors.toList());
+                .map(ri -> new RecipeInstruction(repository.nextRecipeInstructionId(),
+                        ri.instructionNumber(),
+                        ri.instruction()))
+                .toList();
         log.debug("Created {} instructions for recipe: {}", instructions.size(), request.name());
 
         RecipeId id = repository.nextId();
